test/tests/stages/16_characters_and_strings/valid/extra_credit/promote_switch_cond_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(c)
  =
  -
  const int(56)
  ;
  switch
  (
  identifier(c)
  )
  {
  case
  const int(33554632)
  :
  return
  const int(1)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  }
