test/tests/stages/16_characters_and_strings/invalid_parse/extra_credit/string_literal_goto.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  string literal("foo")
  ;
  return
  const int(0)
  ;
  }
